--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.1.0",
-    "@typechain/ethers-v5": "^7.0.0",
-    "@typechain/hardhat": "^2.0.1",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.3.0",
-    "chai": "^4.3.4",
-    "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.3.0",
-    "hardhat": "^2.3.0",
-    "hardhat-deploy": "^0.7.10",
-    "ts-generator": "^0.1.1",
-    "ts-node": "^9.1.1",
-    "typechain": "^5.0.0",
-    "typescript": "^4.2.4",
-    "web3": "^1.3.6"
+    "@daostack/arc": "0.0.1-rc.57",
+    "@ethersproject/hardware-wallets": "^5.0.14",
+    "@gnosis.pm/conditional-tokens-contracts": "^1.0.3",
+    "@nomiclabs/hardhat-waffle": "2.0.1",
+    "@openzeppelin/contracts": "4.1.0",
+    "@typechain/ethers-v5": "7.0.0",
+    "@typechain/hardhat": "2.0.1",
+    "@types/mocha": "8.2.2",
+    "@types/node": "15.3.0",
+    "chai": "4.3.4",
+    "ethereum-waffle": "3.3.0",
+    "hardhat": "2.5.0",
+    "hardhat-deploy": "0.7.10",
+    "hardhat-deploy-ethers": "^0.3.0-beta.10",
+    "ts-generator": "0.1.1",
+    "ts-node": "9.1.1",
+    "typechain": "5.0.0",
+    "typescript": "4.2.4",
+    "web3": "1.3.6"
   },
   "devDependencies": {
-    "hardhat-contract-sizer": "^2.0.3"
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
+    "ethers": "^5.4.1",
+    "hardhat-contract-sizer": "2.0.3"
   }
 }
