--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@ethersproject/hardware-wallets": "^5.0.14",
     "@gnosis.pm/conditional-tokens-contracts": "^1.0.3",
     "@nomiclabs/hardhat-waffle": "2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "4.1.0",
+    "@openzeppelin/test-helpers": "^0.5.12",
     "@typechain/ethers-v5": "7.0.0",
     "@typechain/hardhat": "2.0.1",
     "@types/mocha": "8.2.2",
@@ -12,17 +14,17 @@
     "chai": "4.3.4",
     "ethereum-waffle": "3.3.0",
     "hardhat": "2.5.0",
-    "hardhat-deploy": "0.7.10",
-    "hardhat-deploy-ethers": "^0.3.0-beta.10",
+    "hardhat-deploy": "0.8.11",
+    "hardhat-deploy-ethers": "0.3.0-beta.10",
     "ts-generator": "0.1.1",
     "ts-node": "9.1.1",
     "typechain": "5.0.0",
     "typescript": "4.2.4",
-    "web3": "1.3.6"
+    "web3": "^1.5.1"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
-    "ethers": "^5.4.1",
+    "ethers": "5.4.4",
     "hardhat-contract-sizer": "2.0.3"
   }
 }
