--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hardhat": "2.5.0",
     "hardhat-deploy": "0.8.11",
     "hardhat-deploy-ethers": "0.3.0-beta.10",
+    "hardhat-gas-reporter": "^1.0.4",
     "ts-generator": "0.1.1",
     "ts-node": "9.1.1",
     "typechain": "5.0.0",
