--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hardhat-deploy": "0.8.11",
     "hardhat-deploy-ethers": "0.3.0-beta.10",
     "hardhat-gas-reporter": "^1.0.4",
+    "solidity-bytes-utils": "0.8.0",
     "ts-generator": "0.1.1",
     "ts-node": "9.1.1",
     "typechain": "5.0.0",
