--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "ethereum-waffle": "3.3.0",
     "hardhat": "2.5.0",
     "hardhat-deploy": "0.8.11",
-    "hardhat-deploy-ethers": "0.3.0-beta.10",
     "hardhat-gas-reporter": "^1.0.4",
     "solidity-bytes-utils": "0.8.0",
     "ts-generator": "0.1.1",
@@ -25,8 +24,9 @@
     "web3": "^1.5.1"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
-    "ethers": "5.4.4",
-    "hardhat-contract-sizer": "2.0.3"
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "ethers": "^5.4.7",
+    "hardhat-contract-sizer": "2.0.3",
+    "hardhat-log-remover": "^2.0.2"
   }
 }
