--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/mocha": "8.2.2",
     "@types/node": "15.3.0",
     "chai": "4.3.4",
+    "chai-as-promised": "^7.1.1",
     "ethereum-waffle": "3.3.0",
     "hardhat": "2.5.0",
     "hardhat-deploy": "0.8.11",
