--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
     "@typechain/hardhat": "2.0.1",
     "@types/mocha": "8.2.2",
     "@types/node": "15.3.0",
+    "ansi-regex": "5.0.1",
     "bs58": "^4.0.1",
     "chai": "4.3.4",
     "chai-as-promised": "^7.1.1",
     "ethereum-waffle": "3.3.0",
+    "glob-parent": "5.1.2",
     "hardhat": "2.5.0",
     "hardhat-deploy": "0.8.11",
     "hardhat-gas-reporter": "^1.0.4",
+    "lodash": "4.17.21",
+    "mem": "4.0.0",
+    "node-fetch": "2.6.1",
+    "set-value": "4.0.1",
     "ts-generator": "0.1.1",
     "ts-node": "9.1.1",
     "typechain": "5.0.0",
     "typescript": "4.2.4",
-    "web3": "^1.5.1"
+    "underscore": "1.12.1",
+    "web3": "^1.5.1",
+    "yargs-parser": "13.1.2"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
