--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hardhat": "2.5.0",
     "hardhat-deploy": "0.8.11",
     "hardhat-gas-reporter": "^1.0.4",
+    "ipfs-only-hash": "^4.0.0",
     "lodash": "4.17.21",
     "mem": "4.0.0",
     "node-fetch": "2.6.1",
