--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -8,14 +8,14 @@
         "skipLibCheck": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
-        "noEmit": true,
         "esModuleInterop": true,
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
-        "incremental": true
+        "incremental": true,
+        "noEmit": true
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.test.ts", "**/*.tsx"],
     "exclude": ["node_modules"],
