--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,13 +1,12 @@
 {
-    "compilerOptions": {
+  "compilerOptions": {
       "target": "es5",
       "module": "commonjs",
       "strict": true,
       "esModuleInterop": true,
       "outDir": "dist",
+      "noEmit": true
     },
     "include": ["./scripts", "./test"],
-    "files": [
-     "hardhat.config.ts"
-    ]
+    "exclude": ["node_modules"]
   }
