--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,8 @@
         "esModuleInterop": true,
         "jsx": "react",
         "outDir": "dist",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
     },
-    "references": [{"path": "./packages/core"}, {"path": "./packages/app"}],
     "include": ["packages"],
     "exclude": ["**/node_modules", "node_modules"]
 }
