--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "rootDir": ".",
         "baseUrl": "./",
         "paths": {
             "@cambrian/core/*": ["./packages/core/src/*"],
