--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
         "resolveJsonModule": true,
     },
     "include": ["packages"],
-    "exclude": ["**/node_modules", "node_modules"],
-    "files": ["./hardhat.config.ts", "./packages/core/deploy"],
-
+    "exclude": ["**/node_modules", "node_modules", "./packages/core/deploy"],
+    "files": ["hardhat.config.ts"],
 }
