--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,9 +15,10 @@
         "axios": "^0.25.0",
         "bs58": "^4.0.1",
         "cross-env": "5.0.5",
-        "ethers": "^5.5.3",
+        "ethers": "^5.5.4",
         "graphql": "^16.2.0",
         "grommet": "^2.17.5",
+        "ipfs-only-hash": "^4.0.0",
         "lodash": "^4.17.21",
         "next": "^11.1.3-canary.51",
         "next-react-svg": "^1.1.2",
