--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
         "@typechain/ethers-v5": "^9.0.0",
         "axios": "^0.25.0",
         "bs58": "^4.0.1",
+        "cids": "^1.1.9",
         "cross-env": "5.0.5",
         "ethers": "^5.5.4",
         "graphql": "^16.2.0",
