--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,6 +39,7 @@
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "ethers": "^5.4.7",
     "hardhat-contract-sizer": "2.0.3",
-    "hardhat-log-remover": "^2.0.2"
+    "hardhat-log-remover": "^2.0.2",
+    "solc": "0.8.0"
   }
 }
