--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,11 +11,16 @@
     "dependencies": {
         "@babel/core": "7.0.0",
         "@cambrian/core": "0.1.0",
+        "@ceramicnetwork/http-client": "^1.5.7",
+        "@glazed/tile-loader": "^0.1.3",
+        "@self.id/framework": "^0.1.0",
         "@typechain/ethers-v5": "^9.0.0",
+        "@walletconnect/web3-provider": "^1.7.1",
         "axios": "^0.25.0",
         "bs58": "^4.0.1",
         "cids": "^1.1.9",
         "cross-env": "5.0.5",
+        "dotenv": "^16.0.0",
         "ethers": "^5.5.4",
         "graphql": "^16.2.0",
         "grommet": "^2.17.5",
@@ -30,7 +35,10 @@
         "styled-components": "^5.3.1",
         "tsconfig-paths": "^3.12.0",
         "ulid": "^2.3.0",
-        "urql": "^2.0.6"
+        "urql": "^2.0.6",
+        "use-ceramic": "^1.0.0",
+        "web3": "^1.7.0",
+        "web3modal": "^1.9.5"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.16.5",
