--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -17,6 +17,7 @@
         "@typechain/ethers-v5": "^9.0.0",
         "@walletconnect/web3-provider": "^1.7.1",
         "axios": "^0.25.0",
+        "blockies-ts": "^1.0.0",
         "bs58": "^4.0.1",
         "cids": "^1.1.9",
         "cross-env": "5.0.5",
