--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: packages/app/out
+          name: out
           path: packages/app/out
   deploy:
     name: Deploy
@@ -31,7 +31,7 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@v2
         with:
-          name: packages/app/out
+          name: out
           path: packages/app/out
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
