--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,4 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
