Error Logger integration, General Error handling and Form validation improvments

--- a/packages/app/firebase.json
+++ b/packages/app/firebase.json
@@ -17,6 +17,10 @@
                 "function": "addWebhook"
             },
             {
+                "source": "/api/errorLog",
+                "function": "errorLog"
+            },
+            {
                 "destination": "/proposals/[proposalId].html",
                 "regex": "^/proposals/([^/]+?)(?:/)?$"
             },
