--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,6 +33,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-flow-renderer": "^9.6.11",
+        "react-spring": "^9.4.5",
         "styled-components": "^5.3.1",
         "tsconfig-paths": "^3.12.0",
         "ulid": "^2.3.0",
