--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,9 +12,11 @@
         "@babel/core": "7.0.0",
         "@cambrian/core": "0.1.0",
         "@ceramicnetwork/http-client": "^1.5.7",
+        "@codemirror/lang-javascript": "^0.20.0",
         "@glazed/tile-loader": "^0.1.3",
         "@self.id/framework": "^0.1.0",
         "@typechain/ethers-v5": "^9.0.0",
+        "@uiw/react-codemirror": "^4.7.0",
         "@walletconnect/web3-provider": "^1.7.1",
         "axios": "^0.25.0",
         "blockies-ts": "^1.0.0",
