--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,7 +13,7 @@
         "@cambrian/core": "0.1.0",
         "@ceramicnetwork/http-client": "^1.5.7",
         "@glazed/tile-loader": "^0.1.3",
-        "@self.id/framework": "^0.1.0",
+        "@self.id/framework": "^0.3.2",
         "@typechain/ethers-v5": "^9.0.0",
         "@uiw/react-codemirror": "^4.7.0",
         "@walletconnect/web3-provider": "^1.7.1",
@@ -27,6 +27,7 @@
         "graphql": "^16.2.0",
         "grommet": "^2.22.0",
         "ipfs-only-hash": "^4.0.0",
+        "key-did-provider-ed25519": "^2.0.0",
         "lodash": "^4.17.21",
         "next": "^11.1.3-canary.51",
         "next-react-svg": "^1.1.2",
