--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,6 +12,7 @@
         "@babel/core": "7.0.0",
         "@cambrian/core": "0.1.0",
         "@ceramicnetwork/http-client": "^1.5.7",
+        "@ceramicnetwork/stream-tile": "^2.1.3",
         "@glazed/tile-loader": "^0.1.3",
         "@self.id/framework": "^0.3.2",
         "@typechain/ethers-v5": "^9.0.0",
@@ -32,6 +33,7 @@
         "next": "^11.1.3-canary.51",
         "next-react-svg": "^1.1.2",
         "phosphor-react": "^1.4.0",
+        "randimals": "^2.0.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-flow-renderer": "^9.6.11",
@@ -39,7 +41,6 @@
         "tsconfig-paths": "^3.12.0",
         "ulid": "^2.3.0",
         "urql": "^2.0.6",
-        "use-ceramic": "^1.0.0",
         "web3": "^1.7.0",
         "web3modal": "^1.9.5"
     },
