--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/checkout@v2.3.2
       - name: Install Dependencies
         run: yarn install
+      - name: Compile Artifacts
+        run: yarn hardhat compile
       - name: Build
         run: cd packages/app && yarn next build
       - name: Export
