--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -36,7 +36,7 @@
         "randimals": "^2.0.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-flow-renderer": "^9.6.11",
+        "react-flow-renderer": "9.6.11",
         "styled-components": "^5.3.1",
         "tsconfig-paths": "^3.12.0",
         "ulid": "^2.3.0",
