--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -37,6 +37,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-flow-renderer": "9.6.11",
+        "shell-quote": "1.7.3",
         "socket.io-client": "^4.5.1",
         "styled-components": "^5.3.1",
         "tsconfig-paths": "^3.12.0",
