--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,7 +14,7 @@
         "@ceramicnetwork/http-client": "^1.5.7",
         "@ceramicnetwork/stream-tile": "^2.1.3",
         "@glazed/tile-loader": "^0.1.3",
-        "@self.id/framework": "^0.3.2",
+        "@self.id/framework": "0.3.3",
         "@typechain/ethers-v5": "^9.0.0",
         "@uiw/react-codemirror": "^4.7.0",
         "@walletconnect/web3-provider": "^1.7.1",
@@ -23,6 +23,7 @@
         "bs58": "^4.0.1",
         "cids": "^1.1.9",
         "cross-env": "5.0.5",
+        "did-session": "^0.1.1",
         "dotenv": "^16.0.0",
         "ethers": "5.6.1",
         "graphql": "^16.2.0",
