--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,18 +11,32 @@
     "dependencies": {
         "@babel/core": "7.0.0",
         "@cambrian/core": "0.1.0",
-        "@ceramicnetwork/blockchain-utils-linking": "^2.0.10",
-        "@ceramicnetwork/http-client": "^2.3.3",
-        "@ceramicnetwork/stream-tile": "^2.4.2",
+        "@ceramicnetwork/3id-did-resolver": "2.1.8",
+        "@ceramicnetwork/blockchain-utils-linking": "2.0.12",
+        "@ceramicnetwork/blockchain-utils-validation": "2.0.13",
+        "@ceramicnetwork/common": "2.7.0",
+        "@ceramicnetwork/core": "2.10.0",
+        "@ceramicnetwork/http-client": "2.4.0",
+        "@ceramicnetwork/stream-caip10-link": "2.2.4",
+        "@ceramicnetwork/stream-caip10-link-handler": "2.1.5",
+        "@ceramicnetwork/stream-model": "0.6.0",
+        "@ceramicnetwork/stream-model-handler": "0.6.0",
+        "@ceramicnetwork/stream-model-instance": "0.4.2",
+        "@ceramicnetwork/stream-model-instance-handler": "0.7.0",
+        "@ceramicnetwork/stream-tile": "2.4.4",
+        "@ceramicnetwork/stream-tile-handler": "2.2.8",
+        "@ceramicnetwork/streamid": "2.3.4",
         "@typechain/ethers-v5": "^9.0.0",
         "@uiw/react-codemirror": "^4.7.0",
         "@walletconnect/web3-provider": "^1.7.1",
         "axios": "^0.25.0",
         "blockies-ts": "^1.0.0",
         "bs58": "^4.0.1",
+        "ceramic-cacao": "^1.4.0",
         "cids": "^1.1.9",
         "cross-env": "5.0.5",
-        "did-session": "^0.1.1",
+        "did-session": "^0.1.3",
+        "dids": "3.3.1",
         "dotenv": "^16.0.0",
         "ethers": "5.6.1",
         "graphql": "^16.2.0",
@@ -31,9 +45,10 @@
         "key-did-provider-ed25519": "^2.0.1",
         "key-did-resolver": "^2.1.0",
         "lodash": "^4.17.21",
-        "next": "^11.1.3-canary.51",
+        "next": "^12.3.1",
         "next-react-svg": "^1.1.2",
         "phosphor-react": "^1.4.0",
+        "pkh-did-resolver": "^1.0.9",
         "randimals": "^2.0.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
