--- a/packages/app/firebase.json
+++ b/packages/app/firebase.json
@@ -6,6 +6,20 @@
     "hosting": {
         "public": "out",
         "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+        "headers": [
+            {
+                "key": "Access-Control-Allow-Origin",
+                "value": "\\*"
+            },
+            {
+                "key": "Access-Control-Allow-Methods",
+                "value": "GET"
+            },
+            {
+                "key": "Access-Control-Allow-Headers",
+                "value": "X-Requested-With, content-type, Authorization"
+            }
+        ],
         "cleanUrls": true,
         "rewrites": [
             {
