--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "workspaces": [
     "packages/*"
   ],
-  "scripts": {}
+  "scripts": {},
+  "resolutions": {
+    "web3modal/react-dom": "17.0.2"
+  }
 }
