--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
         "@ceramicnetwork/blockchain-utils-linking": "2.0.12",
         "@ceramicnetwork/http-client": "2.4.0",
         "@ceramicnetwork/stream-tile": "2.4.4",
+        "@gnosis.pm/safe-apps-sdk": "^7.8.0",
         "@gnosis.pm/safe-apps-web3modal": "^17.0.1",
         "@typechain/ethers-v5": "^9.0.0",
         "@uiw/react-codemirror": "^4.7.0",
@@ -45,7 +46,7 @@
         "ulid": "^2.3.0",
         "urql": "^2.0.6",
         "web3": "^1.7.0",
-        "web3modal": "^1.9.5"
+        "web3modal": "1.9.5"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.16.5",
