offchain CT ID helpers

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -21,6 +21,7 @@
         "@walletconnect/web3-provider": "^1.7.1",
         "axios": "^0.25.0",
         "blockies-ts": "^1.0.0",
+        "bn.js": "^5.2.1",
         "bs58": "^4.0.1",
         "cids": "^1.1.9",
         "cross-env": "5.0.5",
@@ -35,6 +36,7 @@
         "lodash": "^4.17.21",
         "next": "^12.3.1",
         "next-react-svg": "^1.1.2",
+        "number-to-bn": "^1.7.0",
         "phosphor-react": "^1.4.0",
         "randimals": "^2.0.3",
         "react": "17.0.2",
