--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -16,7 +16,9 @@
         "jsx": "preserve",
         "incremental": true,
         "noEmit": true,
-        "typeRoots": ["src/@types", "node_modules/@types"]
+        "typeRoots": ["src/@types", "node_modules/@types"],
+        "downlevelIteration": true,
+
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.test.ts", "**/*.tsx"],
     "exclude": ["node_modules"],
