--- a/packages/app/firebase.json
+++ b/packages/app/firebase.json
@@ -9,7 +9,7 @@
         "cleanUrls": true,
         "headers": [
             {
-                "source": "*",
+                "source": "**",
                 "headers": [
                     {
                         "key": "Access-Control-Allow-Origin",
