--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -19,6 +19,7 @@
         "@gnosis.pm/safe-apps-web3modal": "^17.0.1",
         "@typechain/ethers-v5": "^9.0.0",
         "@uiw/react-codemirror": "^4.7.0",
+        "@uniswap/token-lists": "^1.0.0-beta.30",
         "@walletconnect/web3-provider": "^1.7.1",
         "axios": "^0.25.0",
         "blockies-ts": "^1.0.0",
