--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,7 @@
     "ethereum-waffle": "3.3.0",
     "glob-parent": "5.1.2",
     "hardhat": "2.11.2",
-    "hardhat-deploy": "0.8.11",
+    "hardhat-deploy": "^0.11.20",
     "hardhat-gas-reporter": "^1.0.4",
     "ipfs-only-hash": "^4.0.0",
     "lodash": "4.17.21",
