--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,9 +11,9 @@
     "dependencies": {
         "@babel/core": "7.0.0",
         "@cambrian/core": "0.1.0",
-        "@ceramicnetwork/blockchain-utils-linking": "2.1.0",
-        "@ceramicnetwork/http-client": "2.5.0",
-        "@ceramicnetwork/stream-tile": "2.4.5",
+        "@ceramicnetwork/blockchain-utils-linking": "2.6.0-rc.0",
+        "@ceramicnetwork/http-client": "2.10.0-rc.0",
+        "@ceramicnetwork/stream-tile": "2.9.0-rc.0",
         "@didtools/pkh-ethereum": "^0.0.2",
         "@gnosis.pm/safe-apps-sdk": "^7.8.0",
         "@gnosis.pm/safe-apps-web3modal": "^17.0.1",
