--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -50,6 +50,7 @@
         "tsconfig-paths": "^3.12.0",
         "ulid": "^2.3.0",
         "urql": "^2.0.6",
+        "use-sound": "^4.0.1",
         "web3": "^1.7.0",
         "web3modal": "1.9.5"
     },
@@ -64,10 +65,12 @@
         "@types/styled-components": "^5.1.14",
         "babel-jest": "^27.4.5",
         "babel-plugin-styled-components": "^2.0.2",
+        "file-loader": "^6.2.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.4.5",
         "prettier": "2.4.1",
         "ts-node": "^10.4.0",
-        "typescript": "^4.4.3"
+        "typescript": "^4.4.3",
+        "url-loader": "^4.1.1"
     }
 }
