--- a/packages/app/firebase.json
+++ b/packages/app/firebase.json
@@ -13,7 +13,10 @@
                 "headers": [
                     {
                         "key": "Access-Control-Allow-Origin",
-                        "value": "https://gnosis-safe.io"
+                        "value": [
+                            "https://gnosis-safe.io",
+                            "https://app.cambrianprotocol.com/api/pinPinata"
+                        ]
                     },
                     {
                         "key": "Access-Control-Allow-Methods",
