--- a/packages/app/public/manifest.json
+++ b/packages/app/public/manifest.json
@@ -1,5 +1,5 @@
 {
     "name": "Cambrian Protocol",
     "description": "Work remotely and get paid in crypto. Don't sign contracts, sign smart contracts.",
-    "iconPath": "../../images/logo/cambrian_protocol_logo.svg"
+    "iconPath": "/images/logo/cambrian_protocol_logo.svg"
 }
