--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "packages/core/forge/lib/openzeppelin-contracts-upgradeable"]
 	path = packages/core/forge/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
+[submodule "packages/core/forge/lib/solidity-lib"]
+	path = packages/core/forge/lib/solidity-lib
+	url = https://github.com/uniswap/solidity-lib
