--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "packages/core/forge/lib/tranche"]
 	path = packages/core/forge/lib/tranche
 	url = https://github.com/buttonwood-protocol/tranche
+[submodule "packages/core/forge/lib/solmate"]
+	path = packages/core/forge/lib/solmate
+	url = https://github.com/rari-capital/solmate
