--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "packages/core/forge/lib/solmate"]
 	path = packages/core/forge/lib/solmate
 	url = https://github.com/rari-capital/solmate
+[submodule "packages/core/forge/lib/v3-periphery"]
+	path = packages/core/forge/lib/v3-periphery
+	url = https://github.com/uniswap/v3-periphery
