--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "packages/core/forge/lib/v2-periphery"]
 	path = packages/core/forge/lib/v2-periphery
 	url = https://github.com/uniswap/v2-periphery
+[submodule "packages/core/forge/lib/v3-core"]
+	path = packages/core/forge/lib/v3-core
+	url = https://github.com/uniswap/v3-core
