--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/contracts": "4.3.2",
+    "@openzeppelin/contracts": "^4.8.2",
     "@openzeppelin/contracts-upgradeable": "4.6.0",
     "@openzeppelin/test-helpers": "^0.5.12",
     "@typechain/ethers-v5": "7.0.0",
