--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,9 +39,8 @@
     "yargs-parser": "13.1.2"
   },
   "devDependencies": {
+    "@narya-ai/contracts": "^0.4.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
-    "@pwnednomore/contracts": "^0.2.14",
-    "forge-std": "^1.1.2",
     "hardhat-contract-sizer": "^2.5.1",
     "hardhat-log-remover": "^2.0.2",
     "solc": "0.8.0"
