--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "packages/core/forge/lib/narya-contracts"]
 	path = packages/core/forge/lib/narya-contracts
 	url = https://github.com/naryaai/narya-contracts
+[submodule "packages/core/forge/lib/button-wrappers"]
+	path = packages/core/forge/lib/button-wrappers
+	url = https://github.com/buttonwood-protocol/button-wrappers
